# employees-manager

./: .gitignore  Cargo.toml  Makefile  README.md  roadmap.md  todo.md
.hooks/: pre-push
docs/: corporate_group.md
employees-manager/: Cargo.toml
employees-manager-be/: Cargo.toml
employees-manager-be/src/: auth.rs  enums.rs  error.rs  main.rs  model.rs
employees-manager-be/src/dtos/: web_app_request.rs  web_app_response.rs
employees-manager-be/src/facade/: admin.rs  sdk.rs  web_app.rs
employees-manager-be/src/model/: db_entities.rs
employees-manager-be/src/router/: admin.rs  web_app.rs
employees-manager-be/src/service/: access_control.rs  company.rs  db.rs  environment.rs  user.rs
employees-manager-fe/: .gitignore  angular.json  nginx.conf  package-lock.json  package.json
employees-manager-fe/colors-utils/: colors-generator.js
employees-manager-fe/src/: index.html  main.ts  styles.scss
employees-manager-fe/src/app/: app.config.ts  app.routes.ts
employees-manager-fe/src/app/guards/: auth.guard.ts  auth_admin.guard.ts  auth_guest.guard.ts
employees-manager-fe/src/app/service/: api.interceptor.ts  api.service.ts  common.ts  mock.ts  (+2 more)
employees-manager-fe/src/environments/: environment.dev.ts  environment.local.ts  environment.maintenance.ts  environment.mocked.ts  environment.pre.ts  environment.preprod.ts  environment.prod.ts  environment.ts
employees-manager-fe/src/styles/: button.scss  colors.scss  override.scss  sections.scss  toast.scss  variables.scss
employees-manager/src/: auth.rs  dtos.rs  enums.rs  error.rs  facade.rs  lib.rs  main.rs  middleware.rs  model.rs  router.rs  service.rs
employees-manager/src/dtos/: sdk_request.rs  sdk_response.rs  web_app_common.rs  web_app_request.rs  web_app_response.rs
employees-manager/src/dtos/web_app_request/: corporate_group.rs
employees-manager/src/dtos/web_app_response/: admin_panel.rs  corporate_group.rs
employees-manager/src/facade/: admin.rs  corporate_group_admin.rs  corporate_group_user.rs  guest.rs  sdk.rs  user.rs  web_app.rs
employees-manager/src/model/: db_entities.rs  internal.rs
employees-manager/src/router/: admin.rs  sdk.rs  web_app.rs
employees-manager/src/router/web_app/: company.rs  corporate_group.rs
employees-manager/src/service/: access_control.rs  admin.rs  company.rs  corporate_group.rs  db.rs  environment.rs  notification.rs  object_storage.rs  project.rs  timesheet.rs  user.rs
employees-manager/src/service/db/: document.rs  reference.rs  transaction.rs
infra/: Dockerfile  Dockerfile-backend  Dockerfile-frontend  Dockerfile-integrated  Makefile  README.md  docker-compose-external.yml  docker-compose-integrated.yml  docker-compose.yml
infra/database-postgre/: init.sql
infra/db_checkpoint-pre/application-database-dev/: user.bson
infra/db_checkpoint-prod/application-database-prod/: user.metadata.json
infra/db_checkpoint/application-database-dev/: user.bson  user.metadata.json
infra/terraform/gcp-infrastructure/: Makefile  artifact-registry.tf  iam.tf  main.tf  pre.state.config  pre.tfvars  prod.state.config  variables.tf
infra/terraform_template/: compute_engine.tf  iam.tf  main.tf  network.tf  terraform.tfvars  variables.tf
locust-testing/: Justfile  locust.conf  locustfile.py  pyproject.toml
(+119 files in other folders)
