[package]
name = "employees-manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true


[dependencies]
# error handling
anyhow = "1.0"
thiserror = "1.0"
# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-appender = "0.2.3"
# asyncio
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
# http client
# reqwest = "0.12.2"
# http server
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
async-trait = "0.1.84"
headers = "0.4"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
# jwt
jsonwebtoken = "8.0"
# time
#chrono = "0.4.35"
# serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# random
#rand = "0.8.5"
# enums
#strum = "0.26"
#strum_macros = "0.26"
# itertools
#itertools = "0.12.1"
# parallelization
#rayon = "1.10.0"
# lazy data objects
once_cell = "1.8"
# database
mongodb = { version = "3.1.1" } #, features = ["tokio-runtime"] }
# utils
regex = "1.10.4"
# endcoding
base64ct = { version = "1.6.0", features = ["alloc"] }
# queue rabbitmq
amqprs = "1.5.4"
uuid = { version = "1.8.0", features = ["v4"] }
# password hashing
bcrypt = "0.15.1"

[dev-dependencies]
mockall = "0.12.1"
mockall_double = "0.3.1"
